# Loom

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PROJECT_CONTEXT.txt  README.md  app.py  diag.md  mkdocs.yml  models_catalog.py  pyproject.toml  readme.md  requirements.txt  seed_db.py
.github/workflows/: docs.yml
app_patch/: __init__.py  catalog_writer.py  code_gen.py  registry_writer.py
docs/: APIS.md  api_reference.md  diag.md  index.md  migration_guide.md  models_desc.md  routing_cookbook.md  stability.md
docs/what-to-do/: index.md  observability_dashboard.md
loom/: __init__.py  _cache.py  _call_key.py  _compare.py  _context.py  _context_cache.py  _dedup.py  _equivalents.py  _logging.py  _loom.py  _pricing.py  _prompt_cache_rates.py  _retry.py  _router.py  _structured.py  batch.py  errors.py  types.py  vault.py
loom/batch_providers/: __init__.py  anthropic_batch.py  openai_batch.py
loom/catalog/: __init__.py  _catalog.py  _data.py  backends.py
loom/context_cache_providers/: __init__.py  gemini_context_cache.py
loom/observability/: __init__.py  analytics.py  dashboard.py  handler.py  queries.py  sink.py
loom/observability/templates/: dashboard.html
loom/providers/: __init__.py  _common.py  _openai_compatible.py  anthropic_provider.py  bfl_provider.py  deepseek_provider.py  gemini_provider.py  hunyuan_provider.py  ideogram_provider.py  minimax_provider.py  mistral_provider.py  moonshot_provider.py  openai_provider.py  perplexity_provider.py  seedream_provider.py  together_provider.py  xai_provider.py  zhipu_provider.py
loom/routing/: __init__.py  balancer.py  health.py  selector.py  signals.py  strategy.py
site/: 404.html  index.html  next.config.ts  package-lock.json  package.json  sitemap.xml  tailwind.config.ts
site/APIS/: index.html
site/api_reference/: index.html
site/diag/: index.html
site/diagram1/: index.html
site/migration_guide/: index.html
site/models_desc/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/src/app/: globals.css  layout.tsx  page.tsx
site/src/app/docs/: page.tsx
site/src/components/nav/: Navbar.tsx
site/src/components/sections/: Architecture.tsx  CTA.tsx  CostOptimization.tsx  Dashboard.tsx  DeveloperExperience.tsx  Features.tsx  Footer.tsx  Hero.tsx  Metrics.tsx
site/src/components/ui/: Button.tsx  CodeBlock.tsx  GlassCard.tsx  GlowOrb.tsx  InstallCommand.tsx  SectionHeading.tsx
site/src/components/visuals/: ArchitectureDiagram.tsx  CostChart.tsx  DashboardBars.tsx  DashboardChart.tsx  LiveLogStream.tsx  (+2 more)
site/src/content/: metrics.ts
site/src/lib/: code-samples.ts  features.ts  providers.ts
site/stability/: index.html
site/what-to-do/: index.html
site/what-to-do/observability_dashboard/: index.html
static/: script.js  style.css
templates/: docs.html  index.html  login.html
tests/: conftest.py  test_analytics.py  test_anthropic_batch.py  test_api_keys.py  test_app_patch.py  test_async.py  test_balancer.py  test_batch.py  test_cache.py  test_call_key.py  test_catalog.py  test_catalog_backends.py  test_compare.py  test_context_cache.py  test_cost.py  test_dedup.py  test_dispatch.py  test_failover.py  test_health.py  test_logging.py  test_observability.py  test_openai_smoke.py  test_prompt_caching.py  test_provider_registry.py  test_retry.py  test_routing.py  test_routing_signals.py  test_structured.py  test_vault.py  test_version.py
what-to-do/: observability_dashboard.md
